--- a/src/app/index.html
+++ b/src/app/index.html
@@ -5,34 +5,41 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en" ng-app="app" ng-class="{ 'force-scrollbar' : !isHomePage }"> <!--<![endif]-->
 <head>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <base href="%%BASE_PATH%%">
 
-    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
-    <link rel="icon" href="favicon.png" type="image/x-icon">
+    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="http://assets.mondotv.co.s3-website-us-west-2.amazonaws.com/apple-touch-icon.png?v=lkg23BpBQO">
+    <link rel="icon" type="image/png" href="http://assets.mondotv.co.s3-website-us-west-2.amazonaws.com/favicon-32x32.png?v=lkg23BpBQO" sizes="32x32">
+    <link rel="icon" type="image/png" href="http://assets.mondotv.co.s3-website-us-west-2.amazonaws.com/favicon-16x16.png?v=lkg23BpBQO" sizes="16x16">
+    <link rel="manifest" href="http://assets.mondotv.co.s3-website-us-west-2.amazonaws.com/manifest.json?v=lkg23BpBQO">
+    <link rel="mask-icon" href="http://assets.mondotv.co.s3-website-us-west-2.amazonaws.com/safari-pinned-tab.svg?v=lkg23BpBQO" color="#59b7d3">
+    <link rel="shortcut icon" href="http://assets.mondotv.co.s3-website-us-west-2.amazonaws.com/favicon.ico?v=lkg23BpBQO">
+    <meta name="apple-mobile-web-app-title" content="MondoTV">
+    <meta name="application-name" content="MondoTV">
+    <meta name="msapplication-config" content="http://assets.mondotv.co.s3-website-us-west-2.amazonaws.com/browserconfig.xml?v=lkg23BpBQO">
+    <meta name="theme-color" content="#59b7d3">
 
     <!-- metadata -->
     <title ng-bind="meta.title">%%DEFAULT_TITLE%%</title>
     <meta name="description" content="%%DEFAULT_DESCRIPTION%%" ng-if="false">
     <meta name="description" content="{{ meta.description | stripHtmlTags }}">
-    <meta name="author" content="Michael Bromley">
+    <meta name="author" content="MondoTV">
     <!-- Twitter summary card metadata. One day this might be crawled... -->
-    <meta property="twitter:card" content="summary" />
-    <meta property="twitter:site" content="@michlbrmly" />
+    <meta property="twitter:card" content="photo" />
+    <meta property="twitter:site" content="@mondotvuk" />
     <meta property="twitter:title" content="{{ meta.title }}" />
     <meta property="twitter:description" content="{{ meta.description | stripHtmlTags }}" />
     <meta property="twitter:image" content="{{ meta.image }}" />
     <meta property="twitter:url" content="{{ meta.url }}" />
     <!-- open graph metadata. One day this might be crawled... -->
     <meta property="og:title" content="{{ meta.title }}" />
-    <meta property="og:site_name " content="Michael Bromley" />
+    <meta property="og:site_name " content="MondoTV" />
     <meta property="og:url " content="{{ meta.url }}" />
     <meta property="og:description" content="{{ meta.description | stripHtmlTags }}" />
     <meta property="og:image" content="{{ meta.image }}" />
-
-    <meta name="viewport" content="width=device-width,initial-scale=1">
 
     <!-- inject:css -->
     <!-- endinject -->
