--- a/src/app/home/home.tpl.html
+++ b/src/app/home/home.tpl.html
@@ -10,7 +10,7 @@
     <div class="pure-u-1 pure-u-md-1-2">
         <h2>Featured Posts</h2>
         <ul class="featured-articles">
-            <li ng-repeat="post in vm.featuredPosts">
+            <li ng-repeat="post in vm.featuredBlogs">
                 <a ui-sref="post({ id: post.ID, title: post.slug })">{{ post.title }}</a>
             </li>
         </ul>
