--- a/src/app/index.html
+++ b/src/app/index.html
@@ -47,40 +47,41 @@
 </head>
 <body ng-controller="AppController as vm">
 
-<div class="mobile-menu-button">
-    <a href="#" ng-click="vm.toggleMobileMenu($event)">
-        <i class="icon-menu" ng-hide="vm.showMobileMenu"></i>
-        <i class="icon-close" ng-show="vm.showMobileMenu"></i>
-    </a>
-</div>
-
-<div class="pure-g">
-    <div class="menu-view pure-u-1 pure-u-sm-1-3 pure-u-md-1-4 pure-u-lg-1-5" ng-class="{'show-mobile-menu': vm.showMobileMenu }">
-        <div class="menu">
-            <ul>
-                <li><a ng-class="{ selected: vm.activeSection === 'home'}" ui-sref="home">Home</a></li>
-                <li><a ng-class="{ selected: vm.activeSection === 'blog' ||
-                                             vm.activeSection === 'post' ||
-                                             vm.activeSection === 'postsByTag' ||
-                                             vm.activeSection === 'postsBySearch'}" ui-sref="blog">Blog</a></li>
-                <li><a ng-class="{ selected: vm.activeSection === 'about'}" ui-sref="about">About</a></li>
-            </ul>
-        </div>
+    <div class="mobile-menu-button">
+        <a href="#" ng-click="vm.toggleMobileMenu($event)">
+            <i class="icon-menu" ng-hide="vm.showMobileMenu"></i>
+            <i class="icon-close" ng-show="vm.showMobileMenu"></i>
+        </a>
     </div>
 
-    <div class="main-view pure-u-1 pure-u-sm-2-3 pure-u-md-3-4 pure-u-lg-4-5">
-        <div class="content">
-            <div ui-view="main"></div>
+    <div class="pure-g">
+        <div class="menu-view pure-u-1" ng-class="{'show-mobile-menu': vm.showMobileMenu }">
+            <div class="pure-menu pure-menu-horizontal">
+                <ul class="pure-menu-list">
+                    <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'home'}" ui-sref="home">Home</a></li>
+                    <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'blog' ||
+                                                 vm.activeSection === 'post' ||
+                                                 vm.activeSection === 'postsByTag' ||
+                                                 vm.activeSection === 'postsBySearch'}" ui-sref="blog">Blog</a></li>
+                    <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'about'}" ui-sref="about">About</a></li>
+                </ul>
+            </div>
         </div>
+
+        <div class="main-view pure-u-1">
+            <div class="content">
+                <div ui-view="main"></div>
+            </div>
+        </div>
+
     </div>
 
-</div>
+    <!-- inject:js -->
+    <!-- endinject -->
 
-<!-- inject:js -->
-<!-- endinject -->
+    <script>
+        // Google Analytics code here
+    </script>
 
-<script>
-    // Google Analytics code here
-</script>
 </body>
 </html>
