--- a/src/app/about/about.tpl.html
+++ b/src/app/about/about.tpl.html
@@ -1,8 +1,8 @@
-<h1>{{ vm.post.title }}</h1>
+<h1 ng-repeat="post in vm.posts">{{ post.title }}</h1>
 
 <div class="pure-g page-content">
-    <div class="pure-u-1">
-      <div ng-bind-html="vm.post.content">
+    <div class="pure-u-1" ng-repeat="post in vm.posts">
+      <div ng-bind-html="post.content">
       </div>
     </div>
 </div>
