--- a/src/app/home/home.tpl.html
+++ b/src/app/home/home.tpl.html
@@ -8,6 +8,14 @@
         </div>
     </div>
     <div class="pure-u-1 pure-u-md-1-2">
+        <h2>Videos</h2>
+        <ul class="featured-articles">
+            <li ng-repeat="video in vm.allVideos">
+                <a ui-sref="post({ id: video.ID, title: video.slug })">{{ video.title }}</a>
+            </li>
+        </ul>
+    </div>
+    <div class="pure-u-1 pure-u-md-1-2">
         <h2>Featured Posts</h2>
         <ul class="featured-articles">
             <li ng-repeat="post in vm.featuredBlogs">
