--- a/src/app/index.html
+++ b/src/app/index.html
@@ -11,15 +11,15 @@
 
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="http://assets.mondotv.co.s3-website-us-west-2.amazonaws.com/apple-touch-icon.png?v=lkg23BpBQO">
-    <link rel="icon" type="image/png" href="http://assets.mondotv.co.s3-website-us-west-2.amazonaws.com/favicon-32x32.png?v=lkg23BpBQO" sizes="32x32">
-    <link rel="icon" type="image/png" href="http://assets.mondotv.co.s3-website-us-west-2.amazonaws.com/favicon-16x16.png?v=lkg23BpBQO" sizes="16x16">
-    <link rel="manifest" href="http://assets.mondotv.co.s3-website-us-west-2.amazonaws.com/manifest.json?v=lkg23BpBQO">
-    <link rel="mask-icon" href="http://assets.mondotv.co.s3-website-us-west-2.amazonaws.com/safari-pinned-tab.svg?v=lkg23BpBQO" color="#59b7d3">
-    <link rel="shortcut icon" href="http://assets.mondotv.co.s3-website-us-west-2.amazonaws.com/favicon.ico?v=lkg23BpBQO">
+    <link rel="apple-touch-icon" sizes="180x180" href="http://assets.mondotv.co.s3-website-us-west-2.amazonaws.com/favicons/apple-touch-icon.png?v=lkg23BpBQO">
+    <link rel="icon" type="image/png" href="http://assets.mondotv.co.s3-website-us-west-2.amazonaws.com/favicons/favicon-32x32.png?v=lkg23BpBQO" sizes="32x32">
+    <link rel="icon" type="image/png" href="http://assets.mondotv.co.s3-website-us-west-2.amazonaws.com/favicons/favicon-16x16.png?v=lkg23BpBQO" sizes="16x16">
+    <link rel="manifest" href="http://assets.mondotv.co.s3-website-us-west-2.amazonaws.com/favicons/manifest.json?v=lkg23BpBQO">
+    <link rel="mask-icon" href="http://assets.mondotv.co.s3-website-us-west-2.amazonaws.com/favicons/safari-pinned-tab.svg?v=lkg23BpBQO" color="#59b7d3">
+    <link rel="shortcut icon" href="http://assets.mondotv.co.s3-website-us-west-2.amazonaws.com/favicons/favicon.ico?v=lkg23BpBQO">
     <meta name="apple-mobile-web-app-title" content="MondoTV">
     <meta name="application-name" content="MondoTV">
-    <meta name="msapplication-config" content="http://assets.mondotv.co.s3-website-us-west-2.amazonaws.com/browserconfig.xml?v=lkg23BpBQO">
+    <meta name="msapplication-config" content="http://assets.mondotv.co.s3-website-us-west-2.amazonaws.com/favicons/browserconfig.xml?v=lkg23BpBQO">
     <meta name="theme-color" content="#59b7d3">
 
     <!-- metadata -->
@@ -54,27 +54,44 @@
         </a>
     </div>
 
-    <div class="pure-g">
-        <div class="menu-view pure-u-1" ng-class="{'show-mobile-menu': vm.showMobileMenu }">
-            <div class="pure-menu pure-menu-horizontal">
-                <ul class="pure-menu-list">
-                    <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'home'}" ui-sref="home">Home</a></li>
-                    <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'blog' ||
-                                                 vm.activeSection === 'post' ||
-                                                 vm.activeSection === 'postsByTag' ||
-                                                 vm.activeSection === 'postsBySearch'}" ui-sref="blog">Blog</a></li>
-                    <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'about'}" ui-sref="about">About</a></li>
-                </ul>
-            </div>
+    <section class="header pure-g" style="max-width:1200px;margin:auto;">
+        <div class="pure-u-1-3">
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
         </div>
-
-        <div class="main-view pure-u-1">
-            <div class="content">
-                <div ui-view="main"></div>
-            </div>
+        <div class="pure-u-1-3" style="text-align:center;">
+            <img src="https://s3-us-west-2.amazonaws.com/assets.mondotv.co/logos/mondotv-logo-web.png" alt="MondoTV" style="display:inline-block;padding:1em 0 0.75em;"/>
         </div>
+        <div class="pure-u-1-3">
+            <ul>
+                <li>
 
-    </div>
+                </li>
+            </ul>
+        </div>
+    </section>
+
+    <nav class="menu-view" ng-class="{'show-mobile-menu': vm.showMobileMenu }" style="padding:0.5em 0;border:solid rgba(0,0,0,0.1);border-width:1px 0;">
+        <div class="pure-menu pure-menu-horizontal" style="max-width:1200px;margin:auto;">
+            <ul class="pure-menu-list">
+                <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'home'}" ui-sref="home">Home</a></li>
+                <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'blog' ||
+                                             vm.activeSection === 'post' ||
+                                             vm.activeSection === 'postsByTag' ||
+                                             vm.activeSection === 'postsBySearch'}" ui-sref="blog">Blog</a></li>
+                <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'about'}" ui-sref="about">About</a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <section class="main-view">
+        <div class="content">
+            <div ui-view="main"></div>
+        </div>
+    </section>
 
     <!-- inject:js -->
     <!-- endinject -->
