--- a/src/less/main.less
+++ b/src/less/main.less
@@ -2,7 +2,7 @@
 @import "home";
 @import "blog";
 @import "wp";
-@import "icons";
+@import "fonts";
 
 .mobile-menu-button {
   font-size: 32px;
@@ -52,13 +52,12 @@
 
 .main-view {
   background: @colour-main-view-bg;
-  min-height: 100vh;
 }
 
 .content {
   margin: auto;
-  max-width: 1024px;
-  padding: 10px 50px;
+  max-width: 1200px;
+  padding: 0.625em 3.125em;
   position: relative;
 
   font-size: 0.85em;
