--- a/src/app/index.html
+++ b/src/app/index.html
@@ -57,9 +57,9 @@
     <section class="header pure-g" style="max-width:1200px;margin:auto;">
         <div class="pure-u-1-3">
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li style="list-style:none;"><a href=""><span class="icon-location"> 1 Fore Street, London EC2Y 5EJ</span></a></li>
+                <li style="list-style:none;"><a href="tel:0203 468 5972"><span class="icon-phone"> 0203 468 5972</span></a></li>
+                <li style="list-style:none;"><a href="mailto:info@mondotv.co"><span class="icon-paper-plane"> info@mondotv.co</span></a></li>
             </ul>
         </div>
         <div class="pure-u-1-3" style="text-align:center;">
@@ -67,9 +67,11 @@
         </div>
         <div class="pure-u-1-3">
             <ul>
-                <li>
-
-                </li>
+                <li style="list-style:none;display:inline-block;font-size:1.25em;"><a href=""><span class="icon-vimeo-circled"></span></a></li>
+                <li style="list-style:none;display:inline-block;font-size:1.45em;"><a href=""><span class="icon-play-circle"></span></a></li>
+                <li style="list-style:none;display:inline-block;font-size:1.25em;"><a href=""><span class="icon-twitter-circled"></span></a></li>
+                <li style="list-style:none;display:inline-block;font-size:1.25em;"><a href=""><span class="icon-facebook-circled"></span></a></li>
+                <li style="list-style:none;display:inline-block;font-size:1.25em;"><a href=""><span class="icon-linkedin-circled"></span></a></li>
             </ul>
         </div>
     </section>
@@ -92,6 +94,15 @@
             <div ui-view="main"></div>
         </div>
     </section>
+
+    <footer class="footer">
+        <section class="pure-g" style="max-width:1200px;margin:auto;">
+            <div class="pure-u-1-4">One</div>
+            <div class="pure-u-1-4">Two</div>
+            <div class="pure-u-1-4">Three</div>
+            <div class="pure-u-1-4">Four</div>
+        </section>
+    </footer>
 
     <!-- inject:js -->
     <!-- endinject -->
