--- a/src/less/vars.less
+++ b/src/less/vars.less
@@ -1,9 +1,9 @@
 // colours
-@colour-a-link: #007562;
-@colour-a-hover: #00987f;
+@colour-a-link: #59b7d3;
+@colour-a-hover: #88cae0;
 @colour-text-deemphasize: #777;
 @colour-text-content: #444;
-@colour-main-view-bg: #f2f2f2;
+@colour-main-view-bg: #fff;
 
 // other
 @box-shadow: 0px 47px 37px -32px rgba(50, 50, 50, 0.12);
