Add new fontfaces.

--- a/src/less/fonts.less
+++ b/src/less/fonts.less
@@ -1,1 +1,21 @@
 @import url('https://file.myfontastic.com/mxT6RVUeBkddoReonVueaS/icons.css');
+
+@font-face {
+		font-family: 'Nexa Light';
+	  src: url('../assets/fonts/NexaLight.eot'); /* IE9 Compat Modes */
+	  src: url('../assets/fonts/NexaLight.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+	       url('../assets/fonts/NexaLight.woff2') format('woff2'), /* Super Modern Browsers */
+	       url('../assets/fonts/NexaLight.woff') format('woff'), /* Pretty Modern Browsers */
+	       url('../assets/fonts/NexaLight.ttf')  format('truetype'), /* Safari, Android, iOS */
+	       url('../assets/fonts/NexaLight.svg#svgNexaLight') format('svg'); /* Legacy iOS */
+}
+
+@font-face {
+		font-family: 'Nexa Bold';
+	  src: url('../assets/fonts/NexaBold.eot'); /* IE9 Compat Modes */
+	  src: url('../assets/fonts/NexaBold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+	       url('../assets/fonts/NexaBold.woff2') format('woff2'), /* Super Modern Browsers */
+	       url('../assets/fonts/NexaBold.woff') format('woff'), /* Pretty Modern Browsers */
+	       url('../assets/fonts/NexaBold.ttf')  format('truetype'), /* Safari, Android, iOS */
+	       url('../assets/fonts/NexaBold.svg#svgNexaLight') format('svg'); /* Legacy iOS */
+}
