--- a/src/less/main.less
+++ b/src/less/main.less
@@ -50,6 +50,13 @@
   }
 }
 
+.pure-menu-item {
+  font-family: 'Nexa Bold';
+  text-transform: uppercase;
+  letter-spacing: 0.35em;
+  font-size: 0.9em;
+}
+
 .main-view {
   background: @colour-main-view-bg;
 }
