--- a/src/app/index.html
+++ b/src/app/index.html
@@ -57,9 +57,9 @@
     <section class="header pure-g" style="max-width:1200px;margin:auto;">
         <div class="pure-u-1-3">
             <ul>
-                <li style="list-style:none;"><a href=""><span class="icon-location"> 1 Fore Street, London EC2Y 5EJ</span></a></li>
-                <li style="list-style:none;"><a href="tel:0203 468 5972"><span class="icon-phone"> 0203 468 5972</span></a></li>
-                <li style="list-style:none;"><a href="mailto:info@mondotv.co"><span class="icon-paper-plane"> info@mondotv.co</span></a></li>
+                <li style="list-style:none;font-size:0.8em"><a href=""><span class="icon-location"> 1 Fore Street, London EC2Y 5EJ</span></a></li>
+                <li style="list-style:none;font-size:0.8em"><a href="tel:0203 468 5972"><span class="icon-phone"> 0203 468 5972</span></a></li>
+                <li style="list-style:none;font-size:0.8em"><a href="mailto:info@mondotv.co"><span class="icon-paper-plane"> info@mondotv.co</span></a></li>
             </ul>
         </div>
         <div class="pure-u-1-3" style="text-align:center;">
