--- a/src/less/vars.less
+++ b/src/less/vars.less
@@ -3,7 +3,18 @@
 @colour-a-hover: #88cae0;
 @colour-text-deemphasize: #777;
 @colour-text-content: #444;
+
 @colour-main-view-bg: #fff;
+
+@color-footer-light: #c1e3ef;
+@color-footer-dark: #4dabc1;
+
+@red: rgb(255,   0,   0);
+@orange: rgb(253, 127,  11);
+@yellow: rgb(235, 255,   0);
+@green: rgb( 22, 243,   3);
+@blue: rgb(  0, 133, 255);
+@purple: rgb(190,  11, 224);
 
 // other
 @box-shadow: 0px 47px 37px -32px rgba(50, 50, 50, 0.12);
