--- a/src/app/index.html
+++ b/src/app/index.html
@@ -54,32 +54,31 @@
         </a>
     </div>
 
-    <section class="header pure-g" style="max-width:1200px;margin:auto;">
+    <section class="header pure-g">
         <div class="pure-u-1-3">
-            <ul>
-                <li style="list-style:none;font-size:0.8em"><a href=""><span class="icon-location"> 1 Fore Street, London EC2Y 5EJ</span></a></li>
-                <li style="list-style:none;font-size:0.8em"><a href="tel:0203 468 5972"><span class="icon-phone"> 0203 468 5972</span></a></li>
-                <li style="list-style:none;font-size:0.8em"><a href="mailto:info@mondotv.co"><span class="icon-paper-plane"> info@mondotv.co</span></a></li>
+            <ul class="header-info">
+                <li><a href=""><span class="icon-location"> 1 Fore Street, London EC2Y 5EJ</span></a></li>
+                <li><a href="tel:0203 468 5972"><span class="icon-phone"> 0203 468 5972</span></a></li>
+                <li><a href="mailto:info@mondotv.co"><span class="icon-paper-plane"> info@mondotv.co</span></a></li>
             </ul>
         </div>
-        <div class="pure-u-1-3" style="text-align:center;">
-            <img src="https://s3-us-west-2.amazonaws.com/assets.mondotv.co/logos/mondotv-logo-web.png" alt="MondoTV" style="display:inline-block;padding:1em 0 0.75em;"/>
+        <div class="pure-u-1-3 header-img">
+            <img src="https://s3-us-west-2.amazonaws.com/assets.mondotv.co/logos/mondotv-logo-web.png" alt="MondoTV"/>
         </div>
         <div class="pure-u-1-3">
-            <ul>
-                <li style="list-style:none;display:inline-block;font-size:1.25em;"><a href=""><span class="icon-vimeo-circled"></span></a></li>
-                <li style="list-style:none;display:inline-block;font-size:1.45em;"><a href=""><span class="icon-play-circle"></span></a></li>
-                <li style="list-style:none;display:inline-block;font-size:1.25em;"><a href=""><span class="icon-twitter-circled"></span></a></li>
-                <li style="list-style:none;display:inline-block;font-size:1.25em;"><a href=""><span class="icon-facebook-circled"></span></a></li>
-                <li style="list-style:none;display:inline-block;font-size:1.25em;"><a href=""><span class="icon-linkedin-circled"></span></a></li>
+            <ul class="header-social">
+                <li><a href=""><span class="icon-vimeo-circled"></span></a></li>
+                <li><a href=""><span class="icon-play-circle"></span></a></li>
+                <li><a href=""><span class="icon-twitter-circled"></span></a></li>
+                <li><a href=""><span class="icon-facebook-circled"></span></a></li>
+                <li><a href=""><span class="icon-linkedin-circled"></span></a></li>
             </ul>
         </div>
     </section>
 
-    <nav class="menu-view" ng-class="{'show-mobile-menu': vm.showMobileMenu }" style="padding:0.5em 0;border:solid rgba(0,0,0,0.1);border-width:1px 0;">
-        <div class="pure-menu pure-menu-horizontal" style="max-width:1200px;margin:auto;">
+    <nav class="menu-view" ng-class="{'show-mobile-menu': vm.showMobileMenu }">
+        <div class="pure-menu pure-menu-horizontal">
             <ul class="pure-menu-list">
-                <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'home'}" ui-sref="home" >Home</a></li>
                 <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'about'}" ui-sref="about" >Who We Are</a></li>
                 <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'projects'}" ui-sref="projects" >Projects</a></li>
                 <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'clients'}" ui-sref="clients" >Clients</a></li>
@@ -101,11 +100,12 @@
     </section>
 
     <footer class="footer">
-        <section class="pure-g" style="max-width:1200px;margin:auto;">
-            <div class="pure-u-1-4">One</div>
-            <div class="pure-u-1-4">Two</div>
-            <div class="pure-u-1-4">Three</div>
-            <div class="pure-u-1-4">Four</div>
+        <section class="pure-g">
+            <hr />
+            <div class="pure-u-1-4 blog">One</div>
+            <div class="pure-u-1-4 twitter">Two</div>
+            <div class="pure-u-1-4 facebook">Three</div>
+            <div class="pure-u-1-4 contact">Four</div>
         </section>
     </footer>
 
