--- a/src/less/main.less
+++ b/src/less/main.less
@@ -168,12 +168,10 @@ a.pure-menu-link:focus {
   background: @colour-main-view-bg;
 }
 
-.content {
+.page-content {
   margin: auto;
   max-width: 1200px;
-  padding: 0.625em 3.125em;
   position: relative;
-
   font-size: 0.85em;
   @media (min-width: 48em) {
     font-size: 1em;
