--- a/src/less/home.less
+++ b/src/less/home.less
@@ -1,13 +1,19 @@
+.featured-articles {
+  margin: 0;
+  padding: 0;
+}
+
 .hero-box {
+  margin-bottom: 2em;
   text-align: center;
   font-size: 1.5em;
   background-color: white;
   border: 1px solid #ccc;
-  border-radius: 3px;
-  padding: 20px;
-  -webkit-box-shadow: 0px 4px 27px -5px rgba(0,0,0,0.75);
-  -moz-box-shadow: 0px 4px 27px -5px rgba(0,0,0,0.75);
-  box-shadow: 0px 4px 27px -5px rgba(0,0,0,0.75);
+  border-radius: 0.188em;
+  padding: 1.25em;
+  -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  -moz-box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 
   h1 {
     margin-bottom: 0;
