--- a/src/app/home/home.tpl.html
+++ b/src/app/home/home.tpl.html
@@ -4,6 +4,7 @@
             <img ng-src="{{ post.featured_image.attachment_meta.sizes.large.url }}" alt="post.title" />
             <h1>{{ post.title }}</h1>
             <a class="pure-button pure-button-primary" ui-sref="post({ id: post.ID, title: post.slug })">Read More</a>
+            <a class="pure-button pure-button-primary">Get In Touch</a>
         </li>
     </ul>
 </section>
