--- a/src/less/main.less
+++ b/src/less/main.less
@@ -256,6 +256,10 @@ blockquote {
   padding-left: 10px;
 }
 
+button {
+  outline-color: transparent;
+}
+
 .no-bullet {
   list-style-type: none;
   padding-left: 0;
