--- a/src/app/home/home.tpl.html
+++ b/src/app/home/home.tpl.html
@@ -20,11 +20,9 @@
         </ul>
     </div>
     <div class="pure-u-1" ng-if="vm.bulletins.length">
-        <div class="hero-box">
-            <h1>Angular Wordpress Seed</h1>
-            <p>
-                A bare-bones <a href="https://angularjs.org/">AngularJS</a> blog app designed to work with the Wordpress <a href="http://wp-api.org/">JSON REST API</a>.
-            </p>
+        <div class="hero-box" ng-repeat="bulletin  in vm.bulletins">
+            <h1>{{ bulletin.title }}</h1>
+            <p>{{ bulletin.content }}</p>
         </div>
     </div>
 </section>
