--- a/src/app/index.html
+++ b/src/app/index.html
@@ -76,7 +76,7 @@
         </div>
     </section>
 
-    <nav class="menu-view" ng-class="{'show-mobile-menu': vm.showMobileMenu }" sticky>
+    <nav class="menu-view" ng-class="{'show-mobile-menu': vm.showMobileMenu }" sticky sticky-class="sticky">
         <div class="pure-menu pure-menu-horizontal">
             <ul class="pure-menu-list">
                 <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'about'}" ui-sref="about" >Who We Are</a></li>
