--- a/src/less/vars.less
+++ b/src/less/vars.less
@@ -3,6 +3,7 @@
 @colour-a-hover: #88cae0;
 @colour-text-deemphasize: #777;
 @colour-text-content: #444;
+@colour-text-dark: #222;
 
 @colour-main-view-bg: #fff;
 
