Update home view.

--- a/src/less/home.less
+++ b/src/less/home.less
@@ -143,3 +143,28 @@
 .slick-slide > .slide-content > .pure-button:nth-child(2) {
   margin-right: 2rem;
 }
+
+.video-list,
+.video-list > .video-item {
+  margin: 0;
+}
+
+.video-list {
+  padding: 0;
+}
+
+.video-list >.video-item:nth-child(4n+1) {
+  padding: 0.25em 1.5em 0.75em 0;
+}
+
+.video-list >.video-item:nth-child(4n+2) {
+  padding: 0.25em 1em 0.75em 0.5em;
+}
+
+.video-list >.video-item:nth-child(4n+3) {
+  padding: 0.25em 0.5em 0.75em 1em;
+}
+
+.video-list >.video-item:nth-child(4n+4) {
+  padding: 0.25em 0em 0.75em 1.5em;
+}
