--- a/src/less/main.less
+++ b/src/less/main.less
@@ -22,11 +22,11 @@
 .header .header-info > li > a,
 .header .header-social > li > a,
 .pure-menu-item > a.pure-menu-link {
-font-family: 'Nexa Bold';
-color: @colour-text-deemphasize;
-text-transform: uppercase;
-font-size: 0.8em;
-cursor: pointer;
+  font-family: 'Nexa Bold';
+  color: @colour-text-deemphasize;
+  text-transform: lowercase;
+  font-size: 1em;
+  cursor: pointer;
 }
 
 .header .header-info > li > a:hover,
@@ -161,7 +161,7 @@ cursor: pointer;
 }
 
 .pure-menu-item > a.pure-menu-link {
-  letter-spacing: 0.35em;
+  letter-spacing: 0.15em;
 }
 
 .pure-menu-active > a.pure-menu-link,
