--- a/src/app/home/home.tpl.html
+++ b/src/app/home/home.tpl.html
@@ -12,17 +12,21 @@
 
 <section class="pure-g page-content" ng-controller="HomeController as vm">
     <div class="pure-u-1">
-        <h2>Videos</h2>
-        <ul>
-            <li ng-repeat="video in vm.allVideos">
-                <a ui-sref="post({ id: video.ID, title: video.slug })">{{ video.title }}</a>
+        <ul class="pure-g video-list">
+            <li ng-repeat="video in vm.allVideos" class="pure-u-1-4 video-item">
+                <a ui-sref="post({ id: video.ID, title: video.slug })">
+                    <img ng-src="{{ video.featured_image.attachment_meta.sizes.medium.url }}" alt="{{ video.title }}" />
+                    <p>
+                      {{ video.tag }}
+                    </p>
+                </a>
             </li>
         </ul>
     </div>
     <div class="pure-u-1" ng-if="vm.bulletins.length">
         <div class="hero-box" ng-repeat="bulletin  in vm.bulletins">
             <h1>{{ bulletin.title }}</h1>
-            <p>{{ bulletin.content }}</p>
+            <a class="pure-button">Read More</a>
         </div>
     </div>
 </section>
