--- a/src/less/fonts.less
+++ b/src/less/fonts.less
@@ -1,4 +1,4 @@
-// @import url('https://file.myfontastic.com/mxT6RVUeBkddoReonVueaS/icons.css');
+@import url('https://file.myfontastic.com/mxT6RVUeBkddoReonVueaS/icons.css');
 
 @font-face {
 		font-family: 'Nexa Light';
