--- a/src/less/main.less
+++ b/src/less/main.less
@@ -110,7 +110,7 @@
   z-index: 2;
 
   @media (min-width: 35.5em) {
-    padding: 0.75em 0 0.5em;
+    padding: 0.5em 0;
     border: solid rgba(0,0,0,0.1);
     border-width: 1px 0;
     transform: none;
