--- a/src/app/index.html
+++ b/src/app/index.html
@@ -117,6 +117,11 @@
                 <li><span class="icon-linkedin"></span></li>
             </ul>
         </section>
+        <section>
+            <ul>
+                <li></li>
+            </ul>
+        </section>
     </footer>
 
     <!-- inject:js -->
