--- a/src/app/home/home.tpl.html
+++ b/src/app/home/home.tpl.html
@@ -1,4 +1,4 @@
-<section>
+<section class="slider-contain">
     <slick class="featured-articles" infinite="true" autoplay="true" dots="true" arrows="true" data="vm.allFeatured" ng-if="vm.allFeatured.length">
         <div ng-repeat="post in vm.allFeatured" style="background-image:url({{ post.featured_image.attachment_meta.sizes.large.url }})">
             <div class="slide-content">
@@ -24,6 +24,7 @@
         </ul>
     </div>
     <div class="pure-u-1" ng-if="vm.bulletins.length">
+        <hr />
         <div class="hero-box" ng-repeat="bulletin  in vm.bulletins">
             <h1>{{ bulletin.title }}</h1>
             <a class="pure-button">Read More</a>
