--- a/src/less/home.less
+++ b/src/less/home.less
@@ -6,13 +6,11 @@
 .hero-box {
   margin-bottom: 2em;
   text-align: center;
-  font-size: 1.5em;
-  background-color: white;
-  border-radius: 0.188em;
+  .linear-gradient(45deg, @colour-a-link, @colour-a-hover);
+  color: #fff;
+  .border-radius(0.188em);
   padding: 1.25em;
-  -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  -moz-box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  .box-shadow(@box-shadow);
 
   h1 {
     margin-bottom: 0;
@@ -118,10 +116,9 @@
   margin: 0.4em 0;
   max-width: 600px;
   color: #fff;
-  font-family: 'Nexa Bold';
   font-size: 5em;
   line-height: 1em;
-  text-transform: uppercase;
+  text-transform: lowercase;
   text-shadow: 0px 0px 15px rgba(0, 0, 0, 0.3);
 }
 
