--- a/src/less/vars.less
+++ b/src/less/vars.less
@@ -6,9 +6,10 @@
 @colour-text-dark: #222;
 
 @colour-main-view-bg: #fff;
+@colour-main-view-placeholder: #e9e9e9;
 
-@color-footer-light: #c1e3ef;
-@color-footer-dark: #4dabc1;
+@colour-border-dark-bg: rgba(255,255,255,0.2);
+@colour-border-light-bg: rgba(0,0,0,0.1);
 
 @red: rgb(255,   0,   0);
 @orange: rgb(253, 127,  11);
@@ -17,5 +18,12 @@
 @blue: rgb(  0, 133, 255);
 @purple: rgb(190,  11, 224);
 
+@gradient-rainbow: 90deg, @green 15%, @green 15%, @green 12%, @blue 12%, @blue 32%, @purple 32%, @purple 35%, #34495e 35%, #34495e 55%, @yellow 55%, @yellow 59%, @orange 59%, @orange 63%, @red 63%, @red 82%, #ecf0f1 82%, #ecf0f1 92%, #95a5a6 92%;
+
+// font
+@font-heading: 'Nexa Bold', sans-serif;
+@font-subheading: 'Nexa Light', sans-serif;
+@font-main: 'Open Sans', sans-serif;
+
 // other
-@box-shadow: 0px 47px 37px -32px rgba(50, 50, 50, 0.12);
+@box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
