--- a/src/less/main.less
+++ b/src/less/main.less
@@ -315,6 +315,20 @@ p.lead {
   font-size: 24px;
 }
 
+.pure-file {
+	width: 0.1px;
+	height: 0.1px;
+	opacity: 0;
+	overflow: hidden;
+	position: absolute;
+	z-index: -1;
+}
+
+label[for="pure-file"] {
+  width: auto!important;
+  cursor: pointer;
+}
+
 @keyframes fadeIn {
   0% {
     opacity: 0;
