--- a/src/less/home.less
+++ b/src/less/home.less
@@ -118,13 +118,15 @@
   text-shadow: 0px 0px 15px rgba(0, 0, 0, 0.3);
 }
 
-.slick-slide > .slide-content > .pure-button {
+.slick-slide > .slide-content > .pure-button,
+.hero-box > .pure-button {
   background: transparent;
   color: #fff;
   border: 1px solid #fff;
 }
 
-.slick-slide > .slide-content > .pure-button:hover {
+.slick-slide > .slide-content > .pure-button:hover,
+.hero-box > .pure-button:hover {
   background: #fff;
   color: #444;
 }
