--- a/src/app/index.html
+++ b/src/app/index.html
@@ -63,7 +63,9 @@
             </ul>
         </div>
         <div class="pure-u-1-3 header-img">
-            <img src="https://s3-us-west-2.amazonaws.com/assets.mondotv.co/logos/mondotv-logo-web.png" alt="MondoTV"/>
+            <a href="/mondotv/build/">
+                <img src="https://s3-us-west-2.amazonaws.com/assets.mondotv.co/logos/mondotv-logo-web.png" alt="MondoTV"/>
+            </a>
         </div>
         <div class="pure-u-1-3">
             <ul class="header-social">
@@ -103,10 +105,18 @@
     <footer class="footer">
         <section class="pure-g footer-info">
             <hr />
-            <div class="pure-u-1-4 blog">One</div>
-            <div class="pure-u-1-4 twitter">Two</div>
-            <div class="pure-u-1-4 facebook">Three</div>
-            <div class="pure-u-1-4 contact">Four</div>
+            <div class="pure-u-1-4 blog">
+                <h4>Blog Updates</h4>
+            </div>
+            <div class="pure-u-1-4 twitter">
+                <h4>Twitter</h4>
+            </div>
+            <div class="pure-u-1-4 facebook">
+                <h4>Facebook</h4>
+            </div>
+            <div class="pure-u-1-4 contact">
+                <h4>Contact</h4>
+            </div>
         </section>
         <section class="pure-g footer-social">
             <ul>
