--- a/src/less/main.less
+++ b/src/less/main.less
@@ -197,7 +197,8 @@ body {
 }
 
 .footer > .pure-g > .pure-u-1-4 {
-  padding: 0 1em;
+  margin: 2em 0;
+  padding: 0 1.5em;
 }
 
 .footer > .footer-info > hr {
@@ -233,7 +234,7 @@ body {
 
 .footer h4 {
   position: relative;
-  margin: 1em 0;
+  margin: 0 0 1.5em;
   font-size: 1.25em;
 }
 
