Update colour palette.

--- a/src/less/vars.less
+++ b/src/less/vars.less
@@ -11,12 +11,12 @@
 @colour-border-dark-bg: rgba(255,255,255,0.2);
 @colour-border-light-bg: rgba(0,0,0,0.1);
 
-@red: rgb(255,   0,   0);
-@orange: rgb(253, 127,  11);
-@yellow: rgb(235, 255,   0);
-@green: rgb( 22, 243,   3);
-@blue: rgb(  0, 133, 255);
-@purple: rgb(190,  11, 224);
+@red: rgb(255, 0, 0);
+@orange: rgb(253, 127, 11);
+@yellow: rgb(255,204,43);
+@green: rgb(22, 243, 3);
+@blue: rgb(46,211,217);
+@purple: rgb(190, 11, 224);
 
 @gradient-rainbow: 90deg, @green 15%, @green 15%, @green 12%, @blue 12%, @blue 32%, @purple 32%, @purple 35%, #34495e 35%, #34495e 55%, @yellow 55%, @yellow 59%, @orange 59%, @orange 63%, @red 63%, @red 82%, #ecf0f1 82%, #ecf0f1 92%, #95a5a6 92%;
 
