--- a/src/app/blog/post.tpl.html
+++ b/src/app/blog/post.tpl.html
@@ -1,14 +1,14 @@
 <div class="pure-g page-content">
     <div class="pure-u-1">
         <h1>{{ vm.post.title }}</h1>
-        
+
         <div class="post-meta">
             <div class="date">
                 {{ vm.post.date | date:'dd MMM yyyy' }}
             </div>
             <ul class="tags">
                 <li ng-repeat="tag in vm.post.terms.post_tag">
-                    <a ui-sref="postsByTag({ tag: tag.slug })">{{ tag.name }}</a>
+                    <a ui-sref="postsByTag({ tag: tag.slug })" ng-if="tag.slug !== 'active'">{{ tag.name }}</a>
                 </li>
             </ul>
         </div>
