--- a/src/less/main.less
+++ b/src/less/main.less
@@ -14,6 +14,7 @@
 html,
 body {
   font-family: @font-main;
+  font-weight: @font-weight-normal;
   color: @colour-text-content;
 }
 
@@ -29,10 +30,10 @@ body {
 .header .header-info > li > a,
 .header .header-social > li > a,
 .pure-menu-item > a.pure-menu-link {
-  font-family: 'Nexa Bold';
+  font-weight: @font-weight-bold;
   color: @colour-text-deemphasize;
-  text-transform: lowercase;
-  font-size: 1em;
+  text-transform: uppercase;
+  font-size: 0.8em;
   cursor: pointer;
 }
 
