--- a/src/app/about/about.view.html
+++ b/src/app/about/about.view.html
@@ -1,6 +1,6 @@
 <div class="pure-g page-content">
     <div class="pure-u-1" ng-repeat="post in vm.posts">
-      <h1 ng-repeat="post in vm.posts">{{ post.title }}</h1>
+      <h1 ng-repeat="post in vm.posts">{{ post.title.rendered }}</h1>
       <div ng-bind-html="post.content">
       </div>
     </div>
