--- a/src/less/fonts.less
+++ b/src/less/fonts.less
@@ -1,5 +1,5 @@
 @import url('https://file.myfontastic.com/mxT6RVUeBkddoReonVueaS/icons.css');
-@import 'https://fonts.googleapis.com/css?family=Open+Sans';
+@import 'https://fonts.googleapis.com/css?family=Open+Sans:300,400,800';
 
 @font-face {
 		font-family: 'Nexa Light';
