--- a/src/less/vars.less
+++ b/src/less/vars.less
@@ -24,6 +24,10 @@
 @font-heading: 'Nexa Bold', sans-serif;
 @font-subheading: 'Nexa Light', sans-serif;
 @font-main: 'Open Sans', sans-serif;
+@font-weight-light: 300;
+@font-weight-normal: 400;
+@font-weight-bold: 700;
+@font-weight-extra-bold: 800;
 
 // other
 @box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
