--- a/src/app/index.html
+++ b/src/app/index.html
@@ -64,7 +64,7 @@
         </div>
         <div class="pure-u-1-3 header-img">
             <a ui-sref="home">
-                <img src="https://s3-us-west-2.amazonaws.com/assets.mondotv.co/logos/mondotv-logo-web.png" alt="MondoTV"/>
+                <img src="https://s3-us-west-2.amazonaws.com/assets.mondotv.co/logos/mondotv-logo-web.jpg" alt="MondoTV"/>
             </a>
         </div>
         <div class="pure-u-1-3">
